<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/date"
        android:title="@string/date"
        app:showAsAction="always|withText"
        />
    <item android:id="@+id/arrow_up"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/arrow_up"
        app:showAsAction="always"/>
    <item
        android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/rate_this_app"
        android:title="@string/rate_this_app"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never"/>
</menu>